@@ -31,6 +31,8 @@ Changes
   * Maximum pinned versions in setup.py removed for python 3.6+ (PR #3139)
 
 Deprecations
+  * NCDFWriter `scale_factor` writing will change in version 2.0 to
+    better match AMBER outputs (Issue #2327)
   * Deprecated using the last letter of the segid as the
     chainID when writing PDB files (Issue #3144)
   * Deprecated tempfactors and bfactors being separate
